# my-second-memory

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose-debug.yml  docker-compose.prod.yml  docker-compose.yml  setup.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_resize_embedding_768.py  003_tag_embeddings.py  004_drop_tag_embeddings.py  005_users_and_user_fk.py
backend/app/: auth.py  config.py  errors.py  main.py
backend/app/models/: item.py  tag_embedding.py  user.py
backend/app/repositories/: item_repository.py  tag_repository.py  user_repository.py
backend/app/routers/: auth.py  chat.py  items.py  proxy.py  tags.py
backend/app/schemas/: item.py  tag.py  user.py
backend/app/services/: ai_service.py  embedding_service.py  export_service.py  import_service.py  metadata_extractor.py  password_service.py  search_service.py  tag_dedup_service.py  user_service.py  whitelist_service.py
backend/scripts/: reembed_all.py
backend/tests/services/: test_whitelist_service.py
frontend/: Dockerfile.web  README.md  analysis_options.yaml  android-manifest-patch.xml  angular.json  capacitor.config.ts  ionic.config.json  nginx.conf  package-lock.json  package.json  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/config/: environment.dart  router.dart
frontend/lib/models/: agent_phase.dart  chat_message.dart  (+10 more)
frontend/src/: global.scss  index.html
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
(+60 files in other folders)
